projects/bot_eval_run/run_1768564206346/iterations/01/cmd_python_-m_compileall_-q_mini_ai_tests.stdout.txt
*** Error compiling 'mini_ai\\__init__.py'...
  File "mini_ai\__init__.py", line 3
    This package contains the implementation of a character-level Markov chain generator.
         ^^^^^^^
SyntaxError: invalid syntax

*** Error compiling 'mini_ai\\markov.py'...
Sorry: IndentationError: unexpected unindent (markov.py, line 50)
